tests/neg-custom-args/captures/i16114.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16114.scala:17:32 ---------------------------------------
17 |    val op1: Unit ->{io} Unit = (x: Unit) => // error
   |                                ^
   |                                Found:    (x: Unit) ->{io, fs} Unit
   |                                Required: Unit ->{io} Unit
   |
   |                                Note that capability `fs` is not included in capture set {io}.
   |
18 |      expect[Cap^] {
19 |...
21 |      }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16114.scala:23:32 ---------------------------------------
23 |    val op2: Unit ->{fs} Unit = (x: Unit) => // error
   |                                ^
   |                                Found:    (x: Unit) ->{fs, io} Unit
   |                                Required: Unit ->{fs} Unit
   |
   |                                Note that capability `io` is not included in capture set {fs}.
   |
24 |      expect[Cap^] {
25 |...
27 |      }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16114.scala:35:30 ---------------------------------------
35 |    val op4: Unit ->{} Unit = (x: Unit) =>  // error
   |                              ^
   |                              Found:    (x: Unit) ->{io} Unit
   |                              Required: Unit -> Unit
   |
   |                              Note that capability `io` is not included in capture set {}.
   |
36 |      expect[Cap^](io)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i16114.scala:38:27 ---------------------------------------
38 |    val op: Unit -> Unit = (x: Unit) => // error
   |                           ^
   |                           Found:    (x: Unit) ->{io} Unit
   |                           Required: Unit -> Unit
   |
   |                           Note that capability `io` is not included in capture set {}.
   |
39 |      expect[Cap^] {
40 |...
42 |      }
   |
   | longer explanation available when compiling with `-explain`
